[gd_scene load_steps=3 format=3 uid="uid://p0aia1qesqcw"]

[ext_resource type="Script" path="res://ui/MenuBar.gd" id="1_0rjl1"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_4oyju"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer/MenuBar"]
layout_mode = 2
flat = true
script = ExtResource("1_0rjl1")

[node name="File" type="PopupMenu" parent="VBoxContainer/MenuBar/MenuBar"]
size = Vector2i(100, 151)
item_count = 7
item_0/text = "New"
item_0/id = 0
item_1/text = "Open"
item_1/id = 1
item_2/text = ""
item_2/id = 2
item_2/separator = true
item_3/text = "Save"
item_3/id = 3
item_4/text = "Save As"
item_4/id = 4
item_5/text = ""
item_5/id = 5
item_5/separator = true
item_6/text = "Quit"
item_6/id = 6

[node name="OpenDialog" type="FileDialog" parent="VBoxContainer/MenuBar/MenuBar/File"]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="QuitConfirm" type="ConfirmationDialog" parent="VBoxContainer/MenuBar/MenuBar/File"]
title = "Quit?"
initial_position = 2
ok_button_text = "Quit"
dialog_text = "Are you sure you want to quit?"

[node name="Edit" type="PopupMenu" parent="VBoxContainer/MenuBar/MenuBar"]

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
syntax_highlighter = SubResource("CodeHighlighter_4oyju")

[node name="StatusBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ContextLabel" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
